--- a/index.html
+++ b/index.html
@@ -16,73 +16,72 @@
 
 <body>
 
-        <!-- header design -->
-        <header class="header">
-            <a href="#" class="logo">Portfolio.</a>
+    <!-- header design -->
+    <header class="header">
+        <a href="#" class="logo">Portfolio.</a>
 
-            <nav class="navbar">
-                <a href="#home" style="--i:0;" class="active">Home</a>
-                <a href="#about" style="--i:1;">About</a>
-                <a href="#services" style="--i:2;">Services</a>
-                <a href="#portfolio" style="--i:3;">Portfolio</a>
-                <a href="#contact" style="--i:4;">Contact</a>
-            </nav>
+        <nav class="navbar">
+            <a href="#home" style="--i:0;" class="active">Home</a>
+            <a href="#about" style="--i:1;">About</a>
+            <a href="#services" style="--i:2;">Services</a>
+            <a href="#portfolio" style="--i:3;">Portfolio</a>
+            <a href="#contact" style="--i:4;">Contact</a>
+        </nav>
 
-            <div class="bx bx-moon" id="darkMode-icon"></div>
+        <div class="bx bx-moon" id="darkMode-icon"></div>
 
-            <div class="bx bx-menu" id="menu-icon"></div>
-        </header>
+        <div class="bx bx-menu" id="menu-icon"></div>
+    </header>
 
-        <!-- home section design -->
-        <section class="home" id="home">
+    <!-- home section design -->
+    <section class="home" id="home">
 
-            <div class="home-content">
-                <h3>Hello, I am</h3>
-                <h1>Luis D. Rodriguez</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nostrum doloremque deleniti
-                    eligendi fugiat cum error maxime ab?</p>
-                <div class="social-media">
-                    <a href="https://www.linkedin.com/in/luis-daniel-rodr%C3%ADguez-mart%C3%ADnez-663819201/"
-                        target="_blank"><i class='bx bxl-linkedin-square'></i></a>
-                    <a href="https://github.com/Danielroxs" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.facebook.com/danny.roxs" target="_blank"><i class='bx bxl-meta'></i></a>
-                    <a href="https://www.instagram.com/dan.roxs/" target="_blank"><i
-                            class='bx bxl-instagram-alt'></i></a>
-                </div>
-                <a href="https://docs.google.com/document/d/1zLDzwkYtKyg3HJkTz8xzbJNjxHCTf1Vb/edit?usp=sharing&ouid=112884924232525844380&rtpof=true&sd=true"
-                    target="_blank" class="btn">Download CV</a>
+        <div class="home-content">
+            <h3>Hello, I am</h3>
+            <h1>Luis D. Rodriguez</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nostrum doloremque deleniti
+                eligendi fugiat cum error maxime ab?</p>
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/luis-daniel-rodr%C3%ADguez-mart%C3%ADnez-663819201/"
+                    target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/Danielroxs" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.facebook.com/danny.roxs" target="_blank"><i class='bx bxl-meta'></i></a>
+                <a href="https://www.instagram.com/dan.roxs/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
             </div>
+            <a href="https://docs.google.com/document/d/1zLDzwkYtKyg3HJkTz8xzbJNjxHCTf1Vb/edit?usp=sharing&ouid=112884924232525844380&rtpof=true&sd=true"
+                target="_blank" class="btn">Download CV</a>
+        </div>
 
-            <div class="profession-container">
-                <div class="profession-box">
-                    <div class="profession" style="--i:0;">
-                        <i class='bx bx-code-alt'></i>
-                        <h3>Web Developer</h3>
-                    </div>
-                    <div class="profession" style="--i:1;">
-                        <i class='bx bx-camera' ></i>
-                        <h3>Photographer</h3>
-                    </div>
-                    <div class="profession" style="--i:2;">
-                        <i class='bx bx-palette' ></i>
-                        <h3>Web Designer</h3>
-                    </div>
-                    <div class="profession" style="--i:3;">
-                        <i class='bx bx-video' ></i>
-                        <h3>Videographer</h3>
-                    </div>
-
-                    <div class="circle"></div>
+        <div class="profession-container">
+            <div class="profession-box">
+                <div class="profession" style="--i:0;">
+                    <i class='bx bx-code-alt'></i>
+                    <h3>Web Developer</h3>
+                </div>
+                <div class="profession" style="--i:1;">
+                    <i class='bx bx-camera'></i>
+                    <h3>Photographer</h3>
+                </div>
+                <div class="profession" style="--i:2;">
+                    <i class='bx bx-palette'></i>
+                    <h3>Web Designer</h3>
+                </div>
+                <div class="profession" style="--i:3;">
+                    <i class='bx bx-video'></i>
+                    <h3>Videographer</h3>
                 </div>
 
-                <div class="overlay"></div>
+                <div class="circle"></div>
             </div>
 
-            <div class="home-img">
-                <img src="images/imgWhite.png" alt="Photo">
-            </div>
+            <div class="overlay"></div>
+        </div>
 
-        </section>
+        <div class="home-img">
+            <img src="images/imgWhite.png" alt="Photo">
+        </div>
+
+    </section>
 
 
     <!-- about section design -->
@@ -263,8 +262,13 @@
         </div>
     </footer>
 
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <!-- custom js -->
     <script src="script.js"></script>
 </body>
 
