added send email & sweet alert

--- a/index.html
+++ b/index.html
@@ -289,6 +289,12 @@
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <!-- Send Email -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+    <!-- Sweet alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- custom js -->
     <script src="script.js"></script>
 </body>
