Contact form & encrypt email finished

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </div>
                 <div class="input-field field">
                     <input type="text" placeholder="Email Address" id="email" class="item" autocomplete="off">
-                    <div class="error-txt">Email Address can't be blank</div>
+                    <div class="error-txt email">Email Address can't be blank</div>
                 </div>
             </div>
 
@@ -260,9 +260,8 @@
             </div>
 
             <div class="textarea-field field">
-                <textarea name="" id="message" cols="30" rows="10" placeholder="Your Message" class="item" autocomplete="off">                  
-                </textarea>
-                <div class="error-txt">Message Name can't be blank</div>
+                <textarea name="" id="message" cols="30" rows="10" placeholder="Your Message" class="item" autocomplete="off"></textarea>
+                <div class="error-txt">Message can't be blank</div>
             </div>
 
             <button type="submit" class="btn">Send Message</button>
